# OPSFLUX

./: .dockerignore  .env.example  .gitignore  .tmp-audit-a2004e9c33c64c116.md  .tmp-audit-a66ab7c9d4b9d3b0b.md  .tmp-audit-a77a34f9c2cd26bc7.md  .tmp-audit-af78e20da43bb898f.md  .tmp-snapshot.txt  2FA_IMPLEMENTATION_SUMMARY.md  ANALYSIS_INDEX.md  AUDIT_COMPLET_2026-03-20.md  AUTHENTICATION_FLOW_TEST.md  App.tsx  CHANGELOG.md  CHANGES_SUMMARY.txt  CLAUDE.md  DASHBOARD_MENU_INTEGRATION.md  DOCKER_OPERATIONS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  OVERNIGHT_HANDOFF.md  OVERNIGHT_HANDOFF_2026-04-22.md  OVERNIGHT_HANDOFF_TONIGHT.md  PERMISSIONS_SYSTEM.md  PROJECT_MANAGEMENT_SYSTEM.md  README.dev.md  README.md  README_API_KEYS.md  TEST_SUP-0021.md  TRAVELWIZ_BACKEND_INTEGRATION.md  TRAVELWIZ_BACK_CARGO_SYSTEM.md  TRAVELWIZ_IMPLEMENTATION_STATUS.md  _run_migration.py  alembic.ini  app.config.ts  bug_audit_2026-04-05.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  eas.json  (+12 more)
.claude/: instructions.md  settings.local.json
.github/workflows/: _build-image.yml  agent-images.yml  agent-runner-image.yml  agent-worker-image.yml  ci.yml  playwright-runner-image.yml
__tests__/: formEngine.backend.test.py  toast.test.ts  useFormEngine.test.ts  versionCompare.test.ts
adminer/: Dockerfile  auto-login.php  index.php  login-token.php  plugin.php
agent-runner/: .build-marker  Dockerfile  bootstrap.sh  entrypoint.sh
agent-worker/: .build-marker  Dockerfile  README.md  docker-compose.yml  requirements.txt  worker.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_polymorphic_addresses.py  004_add_tags_notes_attachments.py  005_add_email_templates.py  006_add_tag_hierarchy.py  007_add_phones_contact_emails.py  008_add_dashboard_tables.py  009_add_workflow_columns.py  010_workflow_hardening.py  011_enrich_tiers_contacts.py  (+201 more)
app/: main.py
backend/: Dockerfile  HOOKS_DOCUMENTATION.md  MIGRATIONS_GUIDE.md  add_cache_translations.py  pyproject.toml  test_api_key_generation.py  test_api_key_integration.sh  test_hooks_invitations.py
docker/: Dockerfile.postgres  README.md  init-extensions.sql
docs/: 00_PROJECT.md  01_CORE.md  02_DESIGN_SYSTEM.md  03_DECISIONS.md  04_DATA_MODEL.md  05_DEV_GUIDE.md  06_RBAC.md  07_INTERACTIONS.md  08_SETTINGS.md  09_PROCESSUS.md  10_ROADMAP.md  11_FUNCTIONAL_ANALYSIS.md  AUDIT_PAXLOG_PACKLOG_2026-04.md  AUDIT_PAXLOG_PACKLOG_TRAVELWIZ_FONCTIONNEL_2026-04-29.md  AUDIT_TRAVELWIZ_MOC_2026-04.md  CLAUDE.md  DEPLOY_VPS.md  FUNCTIONAL_ANALYSIS.md  I18N_IMPLEMENTATION_GUIDE.md  LEGACY_NOTICE.md  MODULE_ANALYSIS.md  OVERNIGHT_2026-04-23.md  QA-LOG.md  QA-PROTOCOL-200-v2.md  QA-PROTOCOL-200-v3.md  QA-PROTOCOL-200.md  README.md  STACK.md  UI_AUDIT_REPORT.md  UI_GUIDELINES.md  UI_IMPROVEMENTS_COMPLETED.md  audit-travelwiz-2026-05-31.md  demo-dsi-modules.html  demo-dsi-modules.pptx  demo-dsi-slide.html  demo-dsi-slide.pptx  demo-dsi-slide2.html  index.md  module_manifest_example.json
frontend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  LOADING_INDICATORS.md  PERMISSIONS_SYSTEM.md  POBVUE_IMPROVEMENTS.md  PREFERENCES_SYSTEM_SUMMARY.md  README.md  TIPTAP_FIX_SUMMARY.md  components.json  fix_all_translations.py  index.html  missing_translations.csv  missing_translations.json  missing_translations_report.md  next.config.mjs  next.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  translations-core.json  tsconfig.build.json
frontend_old/: Dockerfile  PERMISSIONS.md  tsconfig.json
modules/: README.md  README_WIDGETS.md  create-module.sh
playwright-runner/: Dockerfile  package.json  run.mjs
scripts/: __init__.py  apply-i18n-core.py  audit_alembic_heads.py  audit_auditable_orphans.py  audit_db_cols_used_in_code.py  audit_model_vs_db.py  audit_permissions.py  cleanup-branches.sh  compare_model_vs_db.py  create_ads_workflow.py  create_test_pipeline.py  db_schema_audit.py  deploy-vps.sh  extract-i18n-keys.py  generate-translations-sql.py  i18n_bulk_translate.py  i18n_check.py  i18n_finalize.py  i18n_find_missing_fr.py  i18n_polish_fr.py  i18n_seed_missing_en.py  import-translations-core.py  insert-translations-core.sql  migrate_smartform.py  port_fr_strings.py  seed_asset_registry_dictionaries.py  seed_i18n.py  setup_agent_staging.py  smoke_moc.sh  sync-mobile.sh  test-firebase.sh
test-e2e/: BUGS.md
tests/: conftest.py  test_announcement_bug_SUP_0043.py  test_announcement_realtime_SUP_0043.py  test_asset_parent_transfer.py  test_compliance_audit_presets.py  test_compliance_audit_scoring.py  test_compliance_pending_record_check.py  test_conformite_transfer_ui.py  test_import_assistant_rbac_targets.py  test_migration_171_phase1.py  test_models_permission_extended.py  test_models_rbac_audit_event.py  test_pdf_translator.py  test_rbac_audit_events_route.py  test_rbac_defaults_routes.py  test_rbac_delegation_expiry.py  test_rbac_delegation_layer.py  test_rbac_delegation_service.py  test_rbac_delegations_routes.py  test_rbac_export_service.py  test_rbac_exports_routes.py  test_rbac_import_service.py  test_rbac_matrix_routes.py  test_rbac_pdf_templates_seed.py  test_transfer_compliance_bug.py  test_users_default_role.py
(+2424 files in other folders)
