[project]
name = "opsflux"
version = "1.0.0"
description = "OpsFlux — Plateforme ERP opérations industrielles multi-tenant"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # ORM & DB
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "geoalchemy2>=0.15.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    # HTTP client
    "httpx>=0.27.0",
    # Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Task scheduling
    "apscheduler>=3.10.0",
    # S3
    "boto3>=1.34.0",
    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    # PDF rendering
    "weasyprint>=62.0",
    "qrcode[pil]>=7.4.2",
    # Crypto
    "cryptography>=42.0.0",
    # MFA / TOTP
    "pyotp>=2.9.0",
    # i18n
    "babel>=2.15.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
    # IA
    "litellm>=1.40.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "jsonpatch>=1.33",
    # LDAP
    "ldap3>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-import-not-at-top — needed for conditional imports
    "E701",   # multiple-statements-on-one-line-colon
    "E702",   # multiple-statements-on-one-line-semicolon
    "E712",   # true-false-comparison — SQLAlchemy filter pattern (col == True)
    "B008",   # function-call-in-default-argument — standard FastAPI Depends() pattern
    "B904",   # raise-without-from-inside-except
    "N806",   # non-lowercase-variable-in-function
    "N811",   # constant-imported-as-non-constant
    "UP042",  # replace-str-enum
    "UP046",  # non-pep695-generic-class
    "E711",   # none-comparison — SQLAlchemy filter pattern (col == None)
    "N814",   # camelcase-imported-as-constant
    "N817",   # camelcase-imported-as-acronym
    "SIM105", # suppressible-exception — contextlib.suppress not always clearer
    "SIM108", # if-else-block-instead-of-if-exp — readability preference
    "SIM102", # collapsible-if
    "SIM103", # needless-bool
    "SIM118", # in-dict-keys
    "SIM401", # if-else-block-instead-of-dict-get
    "B905",   # zip-without-explicit-strict
    "B007",   # unused-loop-control-variable
    # TODO: fix these in a dedicated cleanup PR
    "F841",   # unused-variable — 27 occurrences across codebase
    "F821",   # undefined-name — 15 occurrences, needs careful review
    "F811",   # redefined-while-unused
    "F823",   # undefined-local
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
